# GM

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  build_all.sh  build_release.sh  docker_build.sh  docker_run.sh  generate_xcode_proj.sh  grammer.txt  main.gm  run  run_debug  run_release  test.sh  todo
demo/: flow_ctrl.gm  func.gm  func_closure.gm  func_recursion.gm  func_var.gm  inner_func.gm
demo/new_grammer/: demo.gm
include/GM/: GM.h
include/GM/AST/: gm_ast_binary_expr.hpp  gm_ast_bool_literal_expr.hpp  gm_ast_dict_expr.hpp  gm_ast_header.h  gm_ast_list_expr.hpp  gm_ast_literal_expr.hpp  gm_ast_math_operator_expr.hpp  gm_ast_null_expr.hpp  gm_ast_number_literal_expr.hpp  gm_ast_str_literal_expr.hpp  gm_ast_tree.hpp  gm_ast_var_expr.hpp
include/GM/Common/: gm_errors.hpp
include/GM/Core/: gm_builtin_func.hpp  gm_common_header.h  gm_environment.hpp  gm_error_manager.hpp  gm_interpreter.hpp  gm_memory.hpp  gm_object.hpp  gm_parser.hpp  gm_scanner.hpp
include/GM/Token/: gm_token.hpp
include/GM/Type/: gm_function.hpp  gm_parameter.hpp  gm_value.hpp
include/GM/Type/Value/: gm_bool_value.hpp  gm_custom_function_value.hpp  gm_dict_value.hpp  gm_float_value.hpp  gm_int_value.hpp  gm_list_value.hpp  gm_null_value.hpp  gm_number_value.hpp  gm_pair_value.hpp  gm_str_value.hpp  gm_var_name_value.hpp
include/gmock/: gmock-actions.h  gmock-generated-actions.h  gmock-generated-actions.h.pump  gmock-generated-function-mockers.h  gmock-generated-function-mockers.h.pump  gmock-generated-matchers.h  gmock-generated-matchers.h.pump  gmock-matchers.h  gmock-more-actions.h  gmock-spec-builders.h
include/gmock/internal/: gmock-generated-internal-utils.h  gmock-generated-internal-utils.h.pump  gmock-internal-utils.h  gmock-port.h
include/gtest/: gtest-message.h  gtest-param-test.h  gtest-param-test.h.pump  gtest-printers.h  gtest-test-part.h  gtest.h
include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util-generated.h  gtest-param-util-generated.h.pump  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-type-util.h  gtest-type-util.h.pump
libs/: math.gm
libs/gtest/win32/: gtest.lib
libs/gtest/win32/debug/: gmock_maind.lib  gtest_maind.lib
libs/gtest/win32/release/: gmock_main.lib  gtest_main.lib
src/: CMakeLists.txt  GM.h  gm_builtin_func.cpp  gm_builtin_func.hpp  gm_common_header.h  gm_environment.cpp  gm_environment.h  gm_environment.hpp  gm_interpreter.cpp  gm_interpreter.h  gm_interpreter.hpp  gm_interpreter_utils.cpp  gm_interpreter_utils.hpp  gm_object.cpp  gm_object.hpp  main.cpp
src/AST/: CMakeLists.txt  gm_ast.h  gm_ast_binary_expr.hpp  gm_ast_bool_literal_expr.cpp  gm_ast_dict_expr.cpp  gm_ast_dict_expr.hpp  gm_ast_header.h  gm_ast_int_literal_expr.cpp  gm_ast_int_literal_expr.hpp  gm_ast_list_expr.cpp  gm_ast_list_expr.hpp  gm_ast_literal_expr.cpp  gm_ast_literal_expr.hpp  gm_ast_math_operator_expr.cpp  gm_ast_math_operator_expr.hpp  gm_ast_null_expr.cpp  gm_ast_null_expr.hpp  gm_ast_number_literal_expr.cpp  gm_ast_number_literal_expr.hpp  gm_ast_str_literal_expr.cpp  gm_ast_str_literal_expr.hpp  gm_ast_tree.cpp  gm_ast_tree.hpp  gm_ast_var_expr.cpp  gm_ast_var_expr.hpp
src/Common/: CMakeLists.txt  gm_utils.cpp  gm_utils.hpp
src/Core/: CMakeLists.txt  gm_builtin_func.cpp  gm_environment.cpp  gm_error_manager.cpp  gm_interpreter.cpp  gm_interpreter.hpp  gm_interpreter_utils.cpp  gm_interpreter_utils.hpp  gm_memory.cpp  gm_object.cpp  gm_parser.cpp  gm_scanner.cpp
src/Token/: CMakeLists.txt  gm_token.cpp
src/Type/: CMakeLists.txt  gm_dictionary_value.hpp  gm_float_value.cpp  gm_float_value.hpp  gm_function.cpp  gm_function.hpp  gm_int_value.cpp  gm_int_value.hpp  gm_list_value.cpp  gm_list_value.hpp  gm_number_value.hpp  gm_parameter.cpp  gm_parameter.hpp  gm_str_value.cpp  gm_str_value.hpp  gm_types.h  gm_types_header.h  gm_value.cpp  gm_value.hpp
src/Type/Value/: CMakeLists.txt  gm_bool_value.cpp  gm_bool_value.hpp  gm_custom_function.cpp  gm_custom_function.hpp  gm_custom_function_value.cpp  gm_custom_function_value.hpp  gm_dict_value.cpp  gm_dict_value.hpp  gm_dictionary_value.cpp  gm_dictionary_value.hpp  gm_float_value.cpp  gm_float_value.hpp  gm_int_value.cpp  gm_int_value.hpp  gm_list_value.cpp  gm_list_value.hpp  gm_null_value.cpp  gm_null_value.hpp  gm_number_value.hpp  gm_pair_value.cpp  gm_pair_value.hpp  gm_str_value.cpp  gm_str_value.hpp  gm_var_name_value.cpp  gm_var_name_value.hpp
test/: CMakeLists.txt  main.cpp
test/Interpreter/: T_Interpreter.cpp  T_Interpreter.h
test/Memory/: T_GC.cpp  T_GC.h  T_Memory.cpp  T_Memory.h
test/Value/: T_BoolValue.cpp  T_BoolValue.h  T_FloatValue.cpp  T_FloatValue.h  T_IntValue.cpp  T_IntValue.h
